# alterator-usb-guard

./: .clang-tidy  CMakeLists.txt
.gear/: alterator-usbguard.spec  exclude_submodules
.gear/tags/: list
alterator_bindings/: CMakeLists.txt
alterator_ui/: USBGuard.desktop  ajax.scm  alt-usb-guard.js  alt_usb_guard.css  alterator-usbguard.po  alterator-usbguard.pot  index.html  index.scm
backend/: CMakeLists.txt  config_status.cpp  dispatcher_impl.cpp  guard_rule.hpp  guard_utils.cpp  json_changes.cpp  utils.hpp
common/: CMakeLists.txt  log_reader.cpp  systemd_dbus.cpp
